added first styles for IPad

--- a/src/components/FunctionalButton/FunctionalButton.module.css
+++ b/src/components/FunctionalButton/FunctionalButton.module.css
@@ -25,3 +25,15 @@
 .button_pressed {
     background-color: #E87928;
 }
+
+@media(min-width:768px) {
+    .functional_button {
+        top: 700px;
+        width: 296px;
+        height: 64px;
+        border-radius: 12px;
+
+        font-weight: 600;
+        font-size: 20px;
+    }
+}
