--- a/src/containers/StartPage/Start.module.css
+++ b/src/containers/StartPage/Start.module.css
@@ -54,3 +54,22 @@
         width: 440px;
     }
 }
+
+@media(min-width: 1280px) {
+    .hand_gesture {
+        width: 451.61px;
+        height: 356.59px;
+        top: 45%;
+        left: 30%;
+        transform: translate(-50%, -50%);
+    }
+
+    .title {
+        top: 35%;
+        left: 70%;
+        font-weight: 600;
+        font-size: 56px;
+        width: 456px;
+        text-align: left;
+    }
+}
