--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -114,7 +114,7 @@
 @media(min-width:1280px) {
     .result_info {
         width: 30vw;
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         z-index: -1;
