--- a/src/components/Questions/Questions.module.css
+++ b/src/components/Questions/Questions.module.css
@@ -61,6 +61,7 @@
   outline: none;
   background-color: transparent;
   background-image: url("./images/Inactive.svg");
+  cursor: pointer;
 }
 
 .choise_button:not(:last-child) {
@@ -72,11 +73,21 @@
   position: absolute;
   height: 1px;
   left: 50%;
-  transform: translateX(-50%);
   top: 50%;
+  transform: translate(-50%, -50%);
   background-color: #d0d0d8;
   width: 100vw;
   z-index: -1;
+}
+
+.choise_button:hover {
+  background-image: url("./images/hover.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.choise_button:hover::before {
+  background-color: rgba(255, 139, 55, 1);
 }
 
 .choise_letter {
@@ -88,12 +99,24 @@
   background-image: url("./images/Selected.svg");
 }
 
+.selected::before {
+  background-color: #FF8B37;
+}
+
 .correct {
   background-image: url("./images/Correct.svg");
 }
 
+.correct::before {
+  background-color: #47D867;
+}
+
 .wrong {
   background-image: url("./images/Wrong.svg");
+}
+
+.wrong::before {
+  background-color: #EC6259;
 }
 
 @media(min-width:768px) {
@@ -162,4 +185,53 @@
 
 .show {
   transform: translateX(-100vw);
+}
+
+/* ================resalt_level==================== */
+
+.result_level {
+  position: relative;
+  width: 240px;
+  height: 32px;
+  text-align: center;
+  line-height: 32px;
+  background-image: url('../Menu/images/Rectangle\ 4.svg');
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+}
+
+.result_passed {
+  position: relative;
+  width: 240px;
+  height: 32px;
+  text-align: center;
+  line-height: 32px;
+  background-image: url('../Menu/images/Rectangle\ 4.svg');
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+
+  color: rgba(208, 208, 216, 1);
+}
+
+.result_current {
+  position: relative;
+  width: 240px;
+  height: 32px;
+  text-align: center;
+  line-height: 32px;
+
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+
+  background-image: url('../Menu/images/Current.svg');
+  color: rgba(255, 139, 55, 1);
 }
